Simplify stream collection #32
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>